# cli

./: .envrc  .gitignore  README.md  default.nix  flake.nix  pyproject.toml  setup-ocr.sh
.direnv/: flake-profile-2-link
completions/: caelestia.fish
src/caelestia/: __init__.py  ocr_client.py  ocrd.py  parser.py
src/caelestia/data/: emojis.txt  gen-emojis.ts
src/caelestia/data/schemes/caelestia/default/: dark.txt  light.txt
src/caelestia/data/schemes/catppuccin/frappe/: dark.txt
src/caelestia/data/schemes/catppuccin/latte/: light.txt
src/caelestia/data/schemes/catppuccin/macchiato/: dark.txt
src/caelestia/data/schemes/catppuccin/mocha/: dark.txt
src/caelestia/data/schemes/darkgreen/hard/: dark.txt
src/caelestia/data/schemes/darkgreen/medium/: dark.txt
src/caelestia/data/schemes/dracula/medium/: dark.txt
src/caelestia/data/templates/: cava.conf  discord.scss  gtk.css  kitty.conf  neovim.lua  nvim.lua  pandora.json  thunar.css  warp.yaml
src/caelestia/subcommands/: clicktodo.py  clipboard.py  emoji.py  icons.py  install.py  neovim.py  pip.py  record.py  resizer.py  rshell.py  scheme.py  screenshot.py  shell.py  timer.py  toggle.py  update.py  wallpaper.py
src/caelestia/subcommands/scripts/: rshell  timer
src/caelestia/utils/: colour.py  colourfulness.py  config_watcher.py  hypr.py  notify.py  paths.py  scheme.py  theme.py  version.py  wallpaper.py
src/caelestia/utils/dots/: legacy.py  packages.py
src/caelestia/utils/material/: __init__.py  generator.py  score.py
systemd/: caelestia-ocrd.service
(+20 files in other folders)
