[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "caelestia"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "pillow",
    "materialyoucolor"
]

[project.optional-dependencies]
ocr = [
    "rapidocr-onnxruntime>=1.3.0",
    "onnxruntime>=1.16.0",
    "PyQt6>=6.4.0",
    "numpy>=1.24.0",
    "threadpoolctl>=3.1.0"
]

[project.scripts]
caelestia = "caelestia:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "completions",
    "README.md"
]

[tool.ruff]
line-length = 120
