[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "caelestia"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "pillow",
    "materialyoucolor"
]

[project.scripts]
caelestia = "caelestia:main"

[tool.hatch.version]
source = "vcs"

# Allow building from a source tree without git metadata (e.g. release
# tarballs or AUR/paru build dirs), where hatch-vcs would otherwise fail
[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "completions",
    "README.md"
]

[tool.ruff]
line-length = 120
